# meridian

./: .drone.yml  .gitignore  Cargo.toml  README.md
proto/meridian/: meridian_client_v010.proto  meridian_cluster_v010.proto  meridian_membership_v010.proto
system/: Cargo.toml  build.rs
system/src/: channel.rs  channels.rs  communication.rs  external_client_grpc_server.rs  external_membership_grpc_client.rs  external_membership_grpc_server.rs  grpc.rs  internal_cluster_grpc_client.rs  internal_cluster_grpc_server.rs  lib.rs  membership.rs  node.rs  rpc.rs  runtime.rs  server.rs  state.rs
system/src/channel/: client.rs  membership.rs  membership_communications.rs  membership_failure_detector.rs  membership_list.rs  membership_maintenance.rs  rpc_client.rs  rpc_server.rs  server.rs  server_state.rs  shutdown.rs  state.rs  transition.rs
system/src/channel/membership/: failure_detector.rs  list.rs  sender.rs
system/src/channel/server_state/: candidate.rs  follower.rs  leader.rs  preflight.rs  shutdown.rs
system/src/communication/: membership.rs  membership_dissemination.rs  membership_dynamic_join.rs  membership_maintenance.rs
system/src/communication/membership_maintenance/: dissemination.rs  suspicion.rs
system/src/grpc/: client_server.rs  cluster_client.rs  cluster_server.rs  membership_client.rs  membership_server.rs
system/src/membership/: communications.rs  dynamic_join.rs  failure_detector.rs  list.rs  message.rs  receiver.rs  sender.rs  server.rs  state.rs  static_join.rs
system/src/rpc/: append_entries.rs  client.rs  membership.rs  request_vote.rs  server.rs
system/src/runtime/: sync.rs  tasks.rs
system/src/runtime/sync/: launch.rs  membership_receive_task.rs  membership_send_grpc_task.rs  membership_send_preflight_task.rs  membership_send_server_task.rs  state_receive_action.rs  state_receive_task.rs  state_send_grpc_action.rs  state_send_grpc_task.rs  state_send_server_action.rs  state_send_server_task.rs
system/src/runtime/tasks/: client_grpc.rs  cluster_grpc.rs  membership_grpc.rs  membership_service.rs  preflight.rs  server_service.rs  state_service.rs
system/src/server/: candidate.rs  follower.rs  leader.rs  persistent_state.rs  preflight.rs
system/src/server/leader/: volatile_state.rs
system/src/state/: leader_volatile.rs  persistent.rs  volatile.rs
