[package]
name = "system"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "meridian"
path = "../bin/meridian.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.0", default-features = false }
tokio = { version = "1.11.0", default-features = false, features = [ "rt-multi-thread", "signal", "sync", "time" ] }
tonic = "0.5.2"
prost = "0.8.0"
uuid = { version = "0.8.1", default-features = false, features = [ "std", "v4"] }

[build-dependencies]
tonic-build = { version = "0.5.2", default-features = false, features = [ "transport", "prost" ] }
