[package]
name = "system"
version = "0.1.0"
edition = "2021"
build = false

[[bin]]
name = "meridian"
path = "../bin/meridian.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", default-features = false, features = [ "std", "suggestions" ] }
flexbuffers = { version = "2.0.0", default-features = false }
tokio = { version = "1.19.2", default-features = false, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "test-util",
    "time",
] }
# tonic = "0.6.2"
# prost = "0.9.0"
uuid = { version = "1.1.1", default-features = false, features = [ "std", "v4"] }

# [build-dependencies]
# tonic-build = { version = "0.6.2", default-features = false, features = [ "transport", "prost" ] }
